@@ -81,6 +81,8 @@ class Net::SSLeay::SSL_CTX {
   
   native method add_client_CA : int ($cacert : Net::SSLeay::X509);
   
+  native method add_extra_chain_cert : long ($x509 : Net::SSLeay::X509);
+  
   native method DESTROY : void ();
   
 }
